--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-	"name": "theme-hackershaze",
-	"version": "1.2.1",
-	"engines": {
-		"vscode": ">=0.9.0-pre.1"
-	},
-	"publisher": "Nuuf",
-	"contributes": {
-		"themes": [
-			{
-				"label": "Hackers Haze",
-				"uiTheme": "vs-dark",
-				"path": "./themes/Hackers Haze.tmTheme"
-			}
-		]
-	},
-	"displayName": "Hackers Haze Theme",
-	"description": "A bias theme with a dark background and a warm foreground",
-	"icon": "images/icon.png",
+    "name": "theme-hackershaze",
+    "displayName": "Hackers Haze Theme",
+    "description": "A bias theme with a dark background and a warm foreground",
+    "version": "1.3.0",
+    "publisher": "Nuuf",
+    "engines": {
+        "vscode": "^1.5.0"
+    },
+    "categories": [
+        "Themes"
+    ],
+    "contributes": {
+        "themes": [
+            {
+                "label": "Hackers Haze",
+                "uiTheme": "vs-dark",
+                "path": "./themes/Hackers Haze.tmTheme"
+            }
+        ]
+    },
+    "icon": "images/icon.png",
 	"galleryBanner": {
 		"color": "#000000",
 		"theme": "dark"
-	},
-	"categories": ["Themes"]
+	}
 }
